# ModelViewer

./: .gitignore  CMakeLists.txt  README.md  build.sh
example/: main.cpp
include/: Mesh.h  Model.h
src/: Mesh.cpp  Model.cpp
